Fixed description overflow in request page

--- a/client/stylesheets/assistants/tasks.scss
+++ b/client/stylesheets/assistants/tasks.scss
@@ -239,7 +239,7 @@
 
 .sub {
   opacity: 1;
-  height: 39px;
+  min-height: 39px;
   transition: opacity 0.3s cubic-bezier(1, 0, 1, 0), height 0.2s linear;
   &.not-shown {
     opacity: 0;
